added some home parts
